--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,17 +1,11 @@
 invalid.request.default.message=Requisição inválida
 invalid.id=Id inválido
 register.not.found=Registro não encontrado %s
-register.not.found.by.id=Registro não encontrado para o ID %s
 invalid.document=CNPJ inválido
-document.already.cadastre=Documento já cadastrado
-register.already.cadastre=Registro já cadastrado
-invalid.state.abbreviation=Sigla estado inválida
 column.not.found=Coluna não localizada
 invalid.postal.code=Cep inválido
-start.postal.code.already.cadastre=O %s já está cadastrado como CEP inicial
-end.postal.code.already.cadastre=O %s já está cadastrado como CEP final
 invalid.state=Estado inválido
 state.not.exists=Estado não existe
-start.and.end.postal.code.equals=Os CEPs inicial e final não podem ser iguais
 invalid.calculation.type=Tipo de cálculo inválido
 calculation.type.not.found=Tipo de cálculo não encontrado
+shipping.company.inactive=Transportadora desativada ou removida
