--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,10 +2,10 @@ invalid.request.default.message=Requisição inválida
 invalid.id=Id inválido
 register.not.found=Registro não encontrado %s
 invalid.document=CNPJ inválido
-column.not.found=Coluna não localizada
 invalid.postal.code=Cep inválido
 invalid.state=Estado inválido
 state.not.exists=Estado não existe
 invalid.calculation.type=Tipo de cálculo inválido
 calculation.type.not.found=Tipo de cálculo não encontrado
 shipping.company.inactive=Transportadora desativada ou removida
+order.number.already.exists=Número de pedido já existe
